--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -318,6 +318,18 @@ img {
   display: inline-flex;
   align-items: center;
 }
+.button--small{
+  padding: .75rem 1rem;
+}
+.button--link{
+  padding: 0;
+  background-color:transparent;
+  color: var(--first-color);
+}
+.button--link:hover{
+  background-color: transparent;
+  color: var(--first-color-alt);
+}
 /*==================== ABOUT ====================*/
 .about__img{
   width: 200px;
@@ -513,7 +525,41 @@ img {
   color: var(--first-color);
   margin-bottom: var(--mb-1);
 }
+.services__title{
+  font-size: var(--h3-font-size);
+  margin-bottom: var(--mb-1);
+  font-weight: var(--font-medium);
+}
 
+.services__button{
+  cursor: pointer;
+  font-size: var(--small-font-size);
+}
+.services__button:hover .button__icon{
+  transform: translateX(.25rem);
+}
+.services__modal{
+  position:fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,.5);
+  display: flex;
+  align-items: center;
+  Justify-content: center;
+  padding: 0 1rem;
+  z-index: var(--z-modal);
+  /* opacity: 0; */
+  /*visibility: hidden; */
+  transition: .3s;
+}
+.services__modal-content{
+  postion:relative;
+  background-color: var(--container-color);
+  padding: 1.5rem;
+  border-radius: .5rem;
+}
 /* Active Modal */
 
 
