--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -309,10 +309,17 @@ img {
 .button:hover{
   background-color: var(--first-color-alt);
 }
-.button{
+.button__icon{
   font-size: 1.25rem;
   margin-left: var(--mb-0-5);
   transition: .3s;
+}
+.button--white{
+  background-color: #fff;
+  color: var(--first-color);
+}
+.button--white:hover{
+  background-color: #fff;
 }
 .button--flex{
   display: inline-flex;
@@ -622,7 +629,7 @@ img {
 
 .swiper-button-prev::after,
 .swiper-button-next::after {
-  content: "";
+  content: '';
 }
 
 .swiper-portfolio-icon {
@@ -638,7 +645,7 @@ img {
   right: -0.5rem;
 }
 
-.swiper-horizontal>.swiper-pagination-bullets {
+.swiper-container-horizontal > .swiper-pagination-bullets {
   bottom: -2.5rem;
 }
 
@@ -654,10 +661,64 @@ img {
 
 
 /*==================== PROJECT IN MIND ====================*/
-
-
+.project{
+  text-align: center;
+}
+.project__bg{
+  background-color: var(--first-color-second);
+  padding-top: 3rem;
+}
+.project__title{
+  font-size: var(--h2-font-size);
+  margin-bottom: var(--mb-0-75);
+}
+.project__description{
+  margin-bottom: var(--mb-1-5);
+}
+.project__title,
+.project__description{
+  color: #fff;
+}
+.project__img{
+  width: 232px;
+  justify-self: center;
+}
 /*==================== TESTIMONIAL ====================*/
+.testimonial__data,
+.testimonial__header{
+  display: flex;
+}
 
+.testimonial__data{
+  justify-content: space-between;
+  margin-bottom: var(--mb-1);
+}
+
+.testimonial__img{
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-right: var(--mb-0-75); 
+}
+
+.testimonial__name{
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-medium);
+}
+
+.testimonial__client{
+  font-size: var(--small-font-size);
+  color: var(--text-color-light);
+}
+.testimonial__description{
+  margin-bottom: var(--mb-2-5);
+}
+.testimonial__icon-star{
+  color: var(--first-color);
+}
+.swiper-container .swiper-pagination-testimonial{
+  bottom: 0;
+}
 /*==================== CONTACT ME ====================*/
 .contact_container {
   row-gap: 3rem;
@@ -1013,7 +1074,7 @@ img {
   .swiper-button-next {
       right: -3.5rem;
   }
-  .swiper-container-horizontal>.swiper-pagination-bullets {
+  .swiper-container-horizontal > .swiper-pagination-bullets {
       bottom: -4.5rem;
   }
 
