--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,7 @@
 
     /*========== Colors ==========*/
     /* Change favorite color */
-    --hue-color: 250; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
+    --hue-color: 230; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
 
     /* HSL color mode */
     --first-color: hsl(var(--hue-color), 69%, 61%);
@@ -70,13 +70,34 @@
 }
 
 /*========== Variables Dark theme ==========*/
-
+body.dark-theme{
+   /* HSL color mode */
+   --first-color-second: hsl(var(--hue-color), 30%, 8%);
+   --title-color: hsl(var(--hue-color), 8%, 95%);
+   --text-color: hsl(var(--hue-color), 8%, 75%);
+   --input-color: hsl(var(--hue-color), 29%, 16%);
+   --body-color: hsl(var(--hue-color), 28%, 12%);
+   --container-color: hsl(var(--hue-color), 29%, 16%);
+   --scroll-bar-color: hsl(var(--hue-color), 12%, 48%);
+   --scroll-thumb-color: hsl(var(--hue-color), 12%, 36%);
+}
 
 /*========== Button Dark/Light ==========*/
-
-
+.nav__btns{
+  display: flex;
+  align-items: center;
+}
+.change-theme{
+  font-size: 1.25rem;
+  color: var(--title-color);
+  margin-right: var(--mb-1);
+  cursor: pointer;
+}
+.change-theme:hover{
+  color: var(--first-color);
+}
 /*==================== BASE ====================*/
-* {
+*{
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -227,10 +248,14 @@ img {
   bottom: 0;
 }
 /* Active link */
-
+.active-link{
+  color: var(--first-color);
+}
 
 /* Change background header */ 
-
+.scroll-header{
+  box-shadow: 0 -1px 4px rgba(0,0,0,.15);
+}
 
 /*==================== HOME ====================*/
 .home__container{
@@ -720,11 +745,11 @@ img {
   bottom: 0;
 }
 /*==================== CONTACT ME ====================*/
-.contact_container {
+.contact__container {
   row-gap: 3rem;
 }
 
-.contact__info {
+.contact__information {
   display: flex;
   margin-bottom: var(--mb-2);
   align-items: flex-start;
@@ -841,7 +866,7 @@ img {
 .scrollup {
   position: fixed;
   right: 1rem;
-  bottom: -20%;
+  bottom: 5rem;
   background-color: var(--first-color);
   opacity: 0.8;
   padding: 0 0.3rem;
@@ -854,14 +879,13 @@ img {
   background-color: var(--first-color-alt);
 }
 
-.scrollup_icon {
+.scrollup__icon {
   font-size: 1.5rem;
   color: #fff;
 }
 
 
 /* Show scroll */
-
 .show-scroll {
   bottom: 5rem;
 }
@@ -892,49 +916,73 @@ img {
       margin-left: var(--mb-1);
       margin-right: var(--mb-1);
   }
-  .nav_menu {
+  .nav__menu {
       padding: 2rem 0.25rem 4rem;
   }
-  .nav_list {
+  .nav__list {
       column-gap: 0;
   }
-  .home_content {
+  .home__content {
       grid-template-columns: 0.25fr 3fr;
   }
-  .home_blob {
+  .home__blob {
       width: 180px;
   }
-  .skills_title {
+  .skills__title {
       font-size: var(--normal-font-size);
   }
-  .qualification_data {
+  .qualification__data {
       gap: 0.5rem;
   }
-  .portfolio-img {
+  .services__container{
+    grid-template-columns: max-content;
+    justify-content: center;
+  }
+  .services__content{
+    padding-right: 3.5rem;
+  }
+  .services__modal{
+    padding: 0.5rem;
+  }
+  
+  .project__img {
       width: 200px;
+  }
+  .testimonial__data,.testimonial__header{
+    flex-direction: column;
+    align-items: center;
+  }
+  .testimonial__img{
+    margin-right: 0;
+    margin-bottom: var(--mb-0-25);
+  }
+  .testimonial__data,.testimonial__description{
+    text-align: center;
   }
 }
 
 /* For medium devices */
 
 @media screen and (min-width: 568px) {
-  .home_content {
+  .home__content {
       grid-template-columns: max-content 1fr 1fr;
   }
-  .home_data {
+  .home__data {
       grid-column: initial;
   }
-  .home_img {
+  .home__img {
       order: 1;
       justify-self: center;
   }
-  .about_container,
-  .contact_container,
-  .footer_container,
-  .portfolio_content {
+  .about__container,
+  .contact__container,
+  .footer__container,
+  .portfolio__content,
+  .project__container,
+  .contact__container {
       grid-template-columns: repeat(2, 1fr);
   }
-  .qualification_sections {
+  .qualification__sections {
       display: grid;
       grid-template-columns: 0.6fr;
       justify-content: center;
@@ -952,7 +1000,7 @@ img {
   .section {
       padding: 6rem 0 2rem;
   }
-  .section_subtitle {
+  .section__subtitle {
       margin-bottom: 4rem;
   }
   .header {
@@ -961,89 +1009,89 @@ img {
   }
   .header,
   .main,
-  .footer_container {
+  .footer__container {
       padding: 0 1rem;
   }
   .nav {
       height: calc(var(--header-height) + 1.5rem);
       column-gap: 1rem;
   }
-  .nav_icon,
-  .nav_close,
+  .nav__icon,
+  .nav__close,
   .nav_toggle {
-      display: none;
+      d_isplay: none;
   }
-  .nav_list {
+  .nav__list {
       display: flex;
       column-gap: 2rem;
   }
-  .nav_menu {
+  .nav__menu {
       margin-left: auto;
   }
   .change-theme {
       margin: 0;
   }
-  .home_container {
+  .home__container {
       row-gap: 5rem;
   }
-  .home_content {
+  .home__content {
       padding-top: 5.5rem;
       column-gap: 2rem;
   }
-  .home_blob {
+  .home__blob {
       width: 270px;
   }
-  .home_scroll {
+  .home__scroll {
       display: block;
   }
-  .home_scroll-button {
+  .home__scroll-button {
       margin-left: 3rem;
   }
-  .about_container {
+  .about__container {
       column-gap: 5rem;
   }
-  .about_img {
+  .about__img {
       width: 350px;
   }
-  .about_description {
+  .about__description {
       text-align: initial;
   }
-  .about_button {
+  .about__button {
       justify-content: initial;
   }
-  .skills_container,
-  .about_container {
+  .skills__container,
+  .about__container {
       grid-template-columns: repeat(2, 1fr);
   }
-  .qualification_tabs {
+  .qualification__tabs {
       justify-content: center;
   }
-  .qualification_button {
+  .qualification__button {
       margin: 0 var(--mb-1);
   }
-  .qualification_sections {
+  .qualification__sections {
       grid-template-columns: 0.5fr;
   }
-  .portfolio_img {
+  .portfolio__img {
       width: 320px;
   }
-  .portfolio_content {
+  .portfolio__content {
       align-items: center;
   }
-  .footer_container {
+  .footer__container {
       grid-template-columns: repeat(3, 1fr);
   }
-  .footer_bg {
+  .footer__bg {
       padding: 3rem 0 3.5rem;
   }
-  .footer_links {
+  .footer__links {
       flex-direction: row;
       column-gap: 1rem;
   }
-  .footer_socials {
+  .footer__socials {
       justify-self: flex-end;
   }
-  .footer_copy {
+  .footer__copy {
       margin-top: 4.5rem;
   }
 }
@@ -1053,16 +1101,16 @@ img {
 @media screen and (min-width: 1024px) {
   .header,
   .main,
-  .footer_container {
+  .footer__container {
       padding: 0;
   }
-  .home_blob {
+  .home__blob {
       width: 320px;
   }
-  .home_social {
+  .home__social {
       transform: translateX(-6rem);
   }
-  .portfolio_content {
+  .portfolio__content {
       column-gap: 5rem;
   }
   .swiper-portfolio-icon {
@@ -1078,10 +1126,10 @@ img {
       bottom: -4.5rem;
   }
 
-  .contact_form {
+  .contact__form {
       width: 460px;
   }
-  .contact_inputs {
+  .contact__inputs {
       grid-template-columns: repeat(2, 1fr);
   }
 }
