--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -184,7 +184,7 @@ img {
   align-items: center;
 }
 .nav__logo,
-.nav__toggles{
+.nav__toggle{
   color: var(--title-color);
   font-weight: var(--font-medium);
 }
@@ -192,11 +192,11 @@ img {
 .nav__logo:hover{
   color: var(--first-color);
 }
-.nav__toggles{
+.nav__toggle{
   font-size: 1.1rem;
   cursor: pointer;
 }
-.nav__toggles:hover{
+.nav__toggle:hover{
   color: var(--first-color);
 }
 
@@ -215,7 +215,7 @@ img {
   
 }
 .nav__list{
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
 }
 .nav__link{
@@ -301,7 +301,7 @@ img {
   margin-bottom: var(--mb-2 );
 }
 .home__scroll{
-  /*display: none;*/
+  display: none;
 }
 .home__scroll-button{
   color: var(--first-color);
@@ -314,8 +314,8 @@ img {
   font-size: 2rem;
 }
 .home__scroll-name{
-  font-size: var(--small-font-sizesize);
-  color: var(--font-medium);
+  font-size: var(--small-font-size);
+  color: var(--title-color);
   font-weight: var(--font-medium);
   margin-right: var(--mb-0-25);
 }
@@ -449,6 +449,7 @@ img {
   display: block;
   background-color: var(--first-color);
 }
+/*
 .skills__html{
   width: 85%;
 }
@@ -463,12 +464,12 @@ img {
 }
 .skills__python{
   width: 65%;
-}
+} */
 .skills__close .skills__list{
   height: 0;
   overflow: hidden;
 }
-.skills_open .skills__list{
+.skills__open .skills__list{
   height: max-content;
   margin-bottom: var(--mb-2-5);
 }
@@ -553,7 +554,7 @@ img {
 }
 .services__icon{
   display: block;
-  font-size: 1.srem;
+  font-size: 1.5rem;
   color: var(--first-color);
   margin-bottom: var(--mb-1);
 }
@@ -1018,8 +1019,8 @@ img {
   }
   .nav__icon,
   .nav__close,
-  .nav_toggle {
-      d_isplay: none;
+  .nav__toggle {
+      display: none;
   }
   .nav__list {
       display: flex;
@@ -1056,8 +1057,11 @@ img {
   .about__description {
       text-align: initial;
   }
-  .about__button {
+  .about__buttons {
       justify-content: initial;
+  }
+  .about__info{
+    justify-content: space-between;
   }
   .skills__container,
   .about__container {
@@ -1072,11 +1076,40 @@ img {
   .qualification__sections {
       grid-template-columns: 0.5fr;
   }
+  .services__container{
+    grid-template-columns: repeat(3, 218px);
+    justify-content: center;
+  }
+  .services__icon{
+    font-size: 2rem;
+  }
+  .services__content{
+    padding: 6rem 0 2rem 2.5rem;
+  }
+  .services__modal-content{
+    width: 450px;
+  }
   .portfolio__img {
       width: 320px;
   }
   .portfolio__content {
       align-items: center;
+  }
+  .project{
+    text-align: initial;
+  }
+  .project__bg{
+    background: none;
+  }
+  .project__container{
+    background-color: var(--first-color-second);
+    border-radius: 1rem;
+    padding: 3rem 2.5rem 0;
+    grid-template-columns: 1fr max-content;
+    column-gap: 3rem;
+  }
+  .project__data{
+    padding-top: .8rem;
   }
   .footer__container {
       grid-template-columns: repeat(3, 1fr);
@@ -1086,7 +1119,7 @@ img {
   }
   .footer__links {
       flex-direction: row;
-      column-gap: 1rem;
+      column-gap: 2rem;
   }
   .footer__socials {
       justify-self: flex-end;
@@ -1109,6 +1142,9 @@ img {
   }
   .home__social {
       transform: translateX(-6rem);
+  }
+  .services__container{
+    grid-template-columns: repeat(3, 238px);
   }
   .portfolio__content {
       column-gap: 5rem;
